--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,13 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <% if (username === '') { %>
+      <a href="/login">Login to the site</a>
+    <% } else { %>
+      <p> Hello <%= username %></p>
+      <% if (admin) { %>
+        <h4>You are an admin!</h4>
+      <% } %>
+    <% } %>
   </body>
 </html>
