--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,11 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <form action="/users/login" method="POST">
+    <form action="/login" method="POST">
       <fieldset>
         <legend>Login to the site</legend>
-        <label for="email">Email: </label>
-        <input type="email" class="field" name="email" id="email" value="" placeholder="Enter your e-mail..." /><br />
+        <label for="username">Email: </label>
+        <input type="text" class="field" name="username" id="username" value="" placeholder="Enter your username..." /><br />
         <label for="password">Password: </label>
         <input type="password" name="password" class="field" id="password" value="" placeholder="Enter your password..." /><br />
         <button type="submit">Login</button>
